ProjetSystem/y.output
Terminals which are not used

   tNBE
   tERROR
   tRETURN
   tMOD
   tINFEG
   tSUP
   tSUPEG
   tOR
   tAND


Rules never reduced

   40 @6: /* empty */


State 88 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Input $end

    1 Input: DefFonc tMAIN tPO tPF tAO Body tAF

    2 FType: tVOID
    3      | tINT

    4 Body: PDeclars PInsts

    5 PDeclars: Decl PDeclars
    6         | /* empty */

    7 Decl: tINT tID tSEMI
    8     | tCONST tINT tID tSEMI
    9     | tINT tMULT tID tSEMI
   10     | tINT tID tAFFECT Maths tSEMI

   11 @1: /* empty */

   12 Decl: tINT tID @1 tCOMA SuiteDecl

   13 @2: /* empty */

   14 SuiteDecl: tID @2 tCOMA SuiteDecl
   15          | tID tSEMI

   16 PInsts: Structure PInsts
   17       | /* empty */

   18 Structure: Inst tSEMI
   19          | BlocIF
   20          | BlocWhile

   21 Inst: Affect
   22     | Printf

   23 Maths: Val
   24      | tPO Maths tPF
   25      | Maths tADD Maths
   26      | Maths tSUB Maths
   27      | Maths tMULT Maths
   28      | Maths tDIV Maths
   29      | Maths tINF Maths
   30      | tMULT Maths

   31 Val: tNB
   32    | tID

   33 Affect: tID tAFFECT Maths
   34       | tMULT tID tAFFECT Maths

   35 Printf: tPRINT tPO Maths tPF

   36 @3: /* empty */

   37 @4: /* empty */

   38 @5: /* empty */

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF

   40 @6: /* empty */

   41 BlocIF: tIF tPO Cond tPF @6 tAO PInsts tAF

   42 Cond: Maths
   43     | Maths tEQ Maths
   44     | /* empty */

   45 @7: /* empty */

   46 @8: /* empty */

   47 BlocWhile: tWHILE tPO @7 Cond tPF @8 tAO PInsts tAF

   48 DefFonc: FType tID tPO Args tPF tAO Body tAF DefFonc
   49        | /* empty */

   50 Args: tID SuiteArgs
   51     | tNB SuiteArgs
   52     | /* empty */

   53 SuiteArgs: tCOMA tID SuiteArgs
   54          | tCOMA tNB SuiteArgs
   55          | tCOMA tNB
   56          | tCOMA tID


Terminals, with rules where they appear

$end (0) 0
error (256)
tNB (258) 31 51 54 55
tID (259) 7 8 9 10 12 14 15 32 33 34 48 50 53 56
tNBE (260)
tIF (261) 39 41
tWHILE (262) 47
tMAIN (263) 1
tPO (264) 1 24 35 39 41 47 48
tPF (265) 1 24 35 39 41 47 48
tAO (266) 1 39 41 47 48
tAF (267) 1 39 41 47 48
tINT (268) 3 7 8 9 10 12
tVOID (269) 2
tERROR (270)
tRETURN (271)
tPRINT (272) 35
tCONST (273) 8
tELSE (274) 39
tSEMI (275) 7 8 9 10 15 18
tCOMA (276) 12 14 53 54 55 56
tADD (277) 25
tSUB (278) 26
tMULT (279) 9 27 30 34
tDIV (280) 28
tMOD (281)
tAFFECT (282) 10 33 34
tEQ (283) 43
tINF (284) 29
tINFEG (285)
tSUP (286)
tSUPEG (287)
tOR (288)
tAND (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Input (36)
    on left: 1, on right: 0
FType (37)
    on left: 2 3, on right: 48
Body (38)
    on left: 4, on right: 1 48
PDeclars (39)
    on left: 5 6, on right: 4 5
Decl (40)
    on left: 7 8 9 10 12, on right: 5
@1 (41)
    on left: 11, on right: 12
SuiteDecl (42)
    on left: 14 15, on right: 12 14
@2 (43)
    on left: 13, on right: 14
PInsts (44)
    on left: 16 17, on right: 4 16 39 41 47
Structure (45)
    on left: 18 19 20, on right: 16
Inst (46)
    on left: 21 22, on right: 18
Maths (47)
    on left: 23 24 25 26 27 28 29 30, on right: 10 24 25 26 27 28 29
    30 33 34 35 42 43
Val (48)
    on left: 31 32, on right: 23
Affect (49)
    on left: 33 34, on right: 21
Printf (50)
    on left: 35, on right: 22
BlocIF (51)
    on left: 39 41, on right: 19
@3 (52)
    on left: 36, on right: 39
@4 (53)
    on left: 37, on right: 39
@5 (54)
    on left: 38, on right: 39
@6 (55)
    on left: 40, on right: 41
Cond (56)
    on left: 42 43 44, on right: 39 41 47
BlocWhile (57)
    on left: 47, on right: 20
@7 (58)
    on left: 45, on right: 47
@8 (59)
    on left: 46, on right: 47
DefFonc (60)
    on left: 48 49, on right: 1 48
Args (61)
    on left: 50 51 52, on right: 48
SuiteArgs (62)
    on left: 53 54 55 56, on right: 50 51 53 54


state 0

    0 $accept: . Input $end

    tINT   shift, and go to state 1
    tVOID  shift, and go to state 2

    $default  reduce using rule 49 (DefFonc)

    Input    go to state 3
    FType    go to state 4
    DefFonc  go to state 5


state 1

    3 FType: tINT .

    $default  reduce using rule 3 (FType)


state 2

    2 FType: tVOID .

    $default  reduce using rule 2 (FType)


state 3

    0 $accept: Input . $end

    $end  shift, and go to state 6


state 4

   48 DefFonc: FType . tID tPO Args tPF tAO Body tAF DefFonc

    tID  shift, and go to state 7


state 5

    1 Input: DefFonc . tMAIN tPO tPF tAO Body tAF

    tMAIN  shift, and go to state 8


state 6

    0 $accept: Input $end .

    $default  accept


state 7

   48 DefFonc: FType tID . tPO Args tPF tAO Body tAF DefFonc

    tPO  shift, and go to state 9


state 8

    1 Input: DefFonc tMAIN . tPO tPF tAO Body tAF

    tPO  shift, and go to state 10


state 9

   48 DefFonc: FType tID tPO . Args tPF tAO Body tAF DefFonc

    tNB  shift, and go to state 11
    tID  shift, and go to state 12

    $default  reduce using rule 52 (Args)

    Args  go to state 13


state 10

    1 Input: DefFonc tMAIN tPO . tPF tAO Body tAF

    tPF  shift, and go to state 14


state 11

   51 Args: tNB . SuiteArgs

    tCOMA  shift, and go to state 15

    SuiteArgs  go to state 16


state 12

   50 Args: tID . SuiteArgs

    tCOMA  shift, and go to state 15

    SuiteArgs  go to state 17


state 13

   48 DefFonc: FType tID tPO Args . tPF tAO Body tAF DefFonc

    tPF  shift, and go to state 18


state 14

    1 Input: DefFonc tMAIN tPO tPF . tAO Body tAF

    tAO  shift, and go to state 19


state 15

   53 SuiteArgs: tCOMA . tID SuiteArgs
   54          | tCOMA . tNB SuiteArgs
   55          | tCOMA . tNB
   56          | tCOMA . tID

    tNB  shift, and go to state 20
    tID  shift, and go to state 21


state 16

   51 Args: tNB SuiteArgs .

    $default  reduce using rule 51 (Args)


state 17

   50 Args: tID SuiteArgs .

    $default  reduce using rule 50 (Args)


state 18

   48 DefFonc: FType tID tPO Args tPF . tAO Body tAF DefFonc

    tAO  shift, and go to state 22


state 19

    1 Input: DefFonc tMAIN tPO tPF tAO . Body tAF

    tINT    shift, and go to state 23
    tCONST  shift, and go to state 24

    $default  reduce using rule 6 (PDeclars)

    Body      go to state 25
    PDeclars  go to state 26
    Decl      go to state 27


state 20

   54 SuiteArgs: tCOMA tNB . SuiteArgs
   55          | tCOMA tNB .

    tCOMA  shift, and go to state 15

    $default  reduce using rule 55 (SuiteArgs)

    SuiteArgs  go to state 28


state 21

   53 SuiteArgs: tCOMA tID . SuiteArgs
   56          | tCOMA tID .

    tCOMA  shift, and go to state 15

    $default  reduce using rule 56 (SuiteArgs)

    SuiteArgs  go to state 29


state 22

   48 DefFonc: FType tID tPO Args tPF tAO . Body tAF DefFonc

    tINT    shift, and go to state 23
    tCONST  shift, and go to state 24

    $default  reduce using rule 6 (PDeclars)

    Body      go to state 30
    PDeclars  go to state 26
    Decl      go to state 27


state 23

    7 Decl: tINT . tID tSEMI
    9     | tINT . tMULT tID tSEMI
   10     | tINT . tID tAFFECT Maths tSEMI
   12     | tINT . tID @1 tCOMA SuiteDecl

    tID    shift, and go to state 31
    tMULT  shift, and go to state 32


state 24

    8 Decl: tCONST . tINT tID tSEMI

    tINT  shift, and go to state 33


state 25

    1 Input: DefFonc tMAIN tPO tPF tAO Body . tAF

    tAF  shift, and go to state 34


state 26

    4 Body: PDeclars . PInsts

    tID     shift, and go to state 35
    tIF     shift, and go to state 36
    tWHILE  shift, and go to state 37
    tPRINT  shift, and go to state 38
    tMULT   shift, and go to state 39

    $default  reduce using rule 17 (PInsts)

    PInsts     go to state 40
    Structure  go to state 41
    Inst       go to state 42
    Affect     go to state 43
    Printf     go to state 44
    BlocIF     go to state 45
    BlocWhile  go to state 46


state 27

    5 PDeclars: Decl . PDeclars

    tINT    shift, and go to state 23
    tCONST  shift, and go to state 24

    $default  reduce using rule 6 (PDeclars)

    PDeclars  go to state 47
    Decl      go to state 27


state 28

   54 SuiteArgs: tCOMA tNB SuiteArgs .

    $default  reduce using rule 54 (SuiteArgs)


state 29

   53 SuiteArgs: tCOMA tID SuiteArgs .

    $default  reduce using rule 53 (SuiteArgs)


state 30

   48 DefFonc: FType tID tPO Args tPF tAO Body . tAF DefFonc

    tAF  shift, and go to state 48


state 31

    7 Decl: tINT tID . tSEMI
   10     | tINT tID . tAFFECT Maths tSEMI
   12     | tINT tID . @1 tCOMA SuiteDecl

    tSEMI    shift, and go to state 49
    tAFFECT  shift, and go to state 50

    $default  reduce using rule 11 (@1)

    @1  go to state 51


state 32

    9 Decl: tINT tMULT . tID tSEMI

    tID  shift, and go to state 52


state 33

    8 Decl: tCONST tINT . tID tSEMI

    tID  shift, and go to state 53


state 34

    1 Input: DefFonc tMAIN tPO tPF tAO Body tAF .

    $default  reduce using rule 1 (Input)


state 35

   33 Affect: tID . tAFFECT Maths

    tAFFECT  shift, and go to state 54


state 36

   39 BlocIF: tIF . tPO Cond tPF @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF
   41       | tIF . tPO Cond tPF @6 tAO PInsts tAF

    tPO  shift, and go to state 55


state 37

   47 BlocWhile: tWHILE . tPO @7 Cond tPF @8 tAO PInsts tAF

    tPO  shift, and go to state 56


state 38

   35 Printf: tPRINT . tPO Maths tPF

    tPO  shift, and go to state 57


state 39

   34 Affect: tMULT . tID tAFFECT Maths

    tID  shift, and go to state 58


state 40

    4 Body: PDeclars PInsts .

    $default  reduce using rule 4 (Body)


state 41

   16 PInsts: Structure . PInsts

    tID     shift, and go to state 35
    tIF     shift, and go to state 36
    tWHILE  shift, and go to state 37
    tPRINT  shift, and go to state 38
    tMULT   shift, and go to state 39

    $default  reduce using rule 17 (PInsts)

    PInsts     go to state 59
    Structure  go to state 41
    Inst       go to state 42
    Affect     go to state 43
    Printf     go to state 44
    BlocIF     go to state 45
    BlocWhile  go to state 46


state 42

   18 Structure: Inst . tSEMI

    tSEMI  shift, and go to state 60


state 43

   21 Inst: Affect .

    $default  reduce using rule 21 (Inst)


state 44

   22 Inst: Printf .

    $default  reduce using rule 22 (Inst)


state 45

   19 Structure: BlocIF .

    $default  reduce using rule 19 (Structure)


state 46

   20 Structure: BlocWhile .

    $default  reduce using rule 20 (Structure)


state 47

    5 PDeclars: Decl PDeclars .

    $default  reduce using rule 5 (PDeclars)


state 48

   48 DefFonc: FType tID tPO Args tPF tAO Body tAF . DefFonc

    tINT   shift, and go to state 1
    tVOID  shift, and go to state 2

    $default  reduce using rule 49 (DefFonc)

    FType    go to state 4
    DefFonc  go to state 61


state 49

    7 Decl: tINT tID tSEMI .

    $default  reduce using rule 7 (Decl)


state 50

   10 Decl: tINT tID tAFFECT . Maths tSEMI

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 66
    Val    go to state 67


state 51

   12 Decl: tINT tID @1 . tCOMA SuiteDecl

    tCOMA  shift, and go to state 68


state 52

    9 Decl: tINT tMULT tID . tSEMI

    tSEMI  shift, and go to state 69


state 53

    8 Decl: tCONST tINT tID . tSEMI

    tSEMI  shift, and go to state 70


state 54

   33 Affect: tID tAFFECT . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 71
    Val    go to state 67


state 55

   39 BlocIF: tIF tPO . Cond tPF @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF
   41       | tIF tPO . Cond tPF @6 tAO PInsts tAF

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    $default  reduce using rule 44 (Cond)

    Maths  go to state 72
    Val    go to state 67
    Cond   go to state 73


state 56

   47 BlocWhile: tWHILE tPO . @7 Cond tPF @8 tAO PInsts tAF

    $default  reduce using rule 45 (@7)

    @7  go to state 74


state 57

   35 Printf: tPRINT tPO . Maths tPF

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 75
    Val    go to state 67


state 58

   34 Affect: tMULT tID . tAFFECT Maths

    tAFFECT  shift, and go to state 76


state 59

   16 PInsts: Structure PInsts .

    $default  reduce using rule 16 (PInsts)


state 60

   18 Structure: Inst tSEMI .

    $default  reduce using rule 18 (Structure)


state 61

   48 DefFonc: FType tID tPO Args tPF tAO Body tAF DefFonc .

    $default  reduce using rule 48 (DefFonc)


state 62

   31 Val: tNB .

    $default  reduce using rule 31 (Val)


state 63

   32 Val: tID .

    $default  reduce using rule 32 (Val)


state 64

   24 Maths: tPO . Maths tPF

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 77
    Val    go to state 67


state 65

   30 Maths: tMULT . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 78
    Val    go to state 67


state 66

   10 Decl: tINT tID tAFFECT Maths . tSEMI
   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths

    tSEMI  shift, and go to state 79
    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tINF   shift, and go to state 84


state 67

   23 Maths: Val .

    $default  reduce using rule 23 (Maths)


state 68

   12 Decl: tINT tID @1 tCOMA . SuiteDecl

    tID  shift, and go to state 85

    SuiteDecl  go to state 86


state 69

    9 Decl: tINT tMULT tID tSEMI .

    $default  reduce using rule 9 (Decl)


state 70

    8 Decl: tCONST tINT tID tSEMI .

    $default  reduce using rule 8 (Decl)


state 71

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   33 Affect: tID tAFFECT Maths .

    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tINF   shift, and go to state 84

    $default  reduce using rule 33 (Affect)


state 72

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   42 Cond: Maths .
   43     | Maths . tEQ Maths

    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tEQ    shift, and go to state 87
    tINF   shift, and go to state 84

    $default  reduce using rule 42 (Cond)


state 73

   39 BlocIF: tIF tPO Cond . tPF @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF
   41       | tIF tPO Cond . tPF @6 tAO PInsts tAF

    tPF  shift, and go to state 88


state 74

   47 BlocWhile: tWHILE tPO @7 . Cond tPF @8 tAO PInsts tAF

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    $default  reduce using rule 44 (Cond)

    Maths  go to state 72
    Val    go to state 67
    Cond   go to state 89


state 75

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   35 Printf: tPRINT tPO Maths . tPF

    tPF    shift, and go to state 90
    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tINF   shift, and go to state 84


state 76

   34 Affect: tMULT tID tAFFECT . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 91
    Val    go to state 67


state 77

   24 Maths: tPO Maths . tPF
   25      | Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths

    tPF    shift, and go to state 92
    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tINF   shift, and go to state 84


state 78

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   30      | tMULT Maths .

    tADD  shift, and go to state 80
    tSUB  shift, and go to state 81
    tINF  shift, and go to state 84

    $default  reduce using rule 30 (Maths)


state 79

   10 Decl: tINT tID tAFFECT Maths tSEMI .

    $default  reduce using rule 10 (Decl)


state 80

   25 Maths: Maths tADD . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 93
    Val    go to state 67


state 81

   26 Maths: Maths tSUB . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 94
    Val    go to state 67


state 82

   27 Maths: Maths tMULT . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 95
    Val    go to state 67


state 83

   28 Maths: Maths tDIV . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 96
    Val    go to state 67


state 84

   29 Maths: Maths tINF . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 97
    Val    go to state 67


state 85

   14 SuiteDecl: tID . @2 tCOMA SuiteDecl
   15          | tID . tSEMI

    tSEMI  shift, and go to state 98

    $default  reduce using rule 13 (@2)

    @2  go to state 99


state 86

   12 Decl: tINT tID @1 tCOMA SuiteDecl .

    $default  reduce using rule 12 (Decl)


state 87

   43 Cond: Maths tEQ . Maths

    tNB    shift, and go to state 62
    tID    shift, and go to state 63
    tPO    shift, and go to state 64
    tMULT  shift, and go to state 65

    Maths  go to state 100
    Val    go to state 67


state 88

   39 BlocIF: tIF tPO Cond tPF . @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF
   41       | tIF tPO Cond tPF . @6 tAO PInsts tAF

    tAO       reduce using rule 36 (@3)
    tAO       [reduce using rule 40 (@6)]
    $default  reduce using rule 36 (@3)

    @3  go to state 101
    @6  go to state 102


state 89

   47 BlocWhile: tWHILE tPO @7 Cond . tPF @8 tAO PInsts tAF

    tPF  shift, and go to state 103


state 90

   35 Printf: tPRINT tPO Maths tPF .

    $default  reduce using rule 35 (Printf)


state 91

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   34 Affect: tMULT tID tAFFECT Maths .

    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tINF   shift, and go to state 84

    $default  reduce using rule 34 (Affect)


state 92

   24 Maths: tPO Maths tPF .

    $default  reduce using rule 24 (Maths)


state 93

   25 Maths: Maths . tADD Maths
   25      | Maths tADD Maths .
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths

    tINF  shift, and go to state 84

    $default  reduce using rule 25 (Maths)


state 94

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   26      | Maths tSUB Maths .
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths

    tINF  shift, and go to state 84

    $default  reduce using rule 26 (Maths)


state 95

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   27      | Maths tMULT Maths .
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths

    tADD  shift, and go to state 80
    tSUB  shift, and go to state 81
    tINF  shift, and go to state 84

    $default  reduce using rule 27 (Maths)


state 96

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   28      | Maths tDIV Maths .
   29      | Maths . tINF Maths

    tADD  shift, and go to state 80
    tSUB  shift, and go to state 81
    tINF  shift, and go to state 84

    $default  reduce using rule 28 (Maths)


state 97

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   29      | Maths tINF Maths .

    $default  reduce using rule 29 (Maths)


state 98

   15 SuiteDecl: tID tSEMI .

    $default  reduce using rule 15 (SuiteDecl)


state 99

   14 SuiteDecl: tID @2 . tCOMA SuiteDecl

    tCOMA  shift, and go to state 104


state 100

   25 Maths: Maths . tADD Maths
   26      | Maths . tSUB Maths
   27      | Maths . tMULT Maths
   28      | Maths . tDIV Maths
   29      | Maths . tINF Maths
   43 Cond: Maths tEQ Maths .

    tADD   shift, and go to state 80
    tSUB   shift, and go to state 81
    tMULT  shift, and go to state 82
    tDIV   shift, and go to state 83
    tINF   shift, and go to state 84

    $default  reduce using rule 43 (Cond)


state 101

   39 BlocIF: tIF tPO Cond tPF @3 . tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF

    tAO  shift, and go to state 105


state 102

   41 BlocIF: tIF tPO Cond tPF @6 . tAO PInsts tAF

    tAO  shift, and go to state 106


state 103

   47 BlocWhile: tWHILE tPO @7 Cond tPF . @8 tAO PInsts tAF

    $default  reduce using rule 46 (@8)

    @8  go to state 107


state 104

   14 SuiteDecl: tID @2 tCOMA . SuiteDecl

    tID  shift, and go to state 85

    SuiteDecl  go to state 108


state 105

   39 BlocIF: tIF tPO Cond tPF @3 tAO . PInsts tAF @4 tELSE tAO @5 PInsts tAF

    tID     shift, and go to state 35
    tIF     shift, and go to state 36
    tWHILE  shift, and go to state 37
    tPRINT  shift, and go to state 38
    tMULT   shift, and go to state 39

    $default  reduce using rule 17 (PInsts)

    PInsts     go to state 109
    Structure  go to state 41
    Inst       go to state 42
    Affect     go to state 43
    Printf     go to state 44
    BlocIF     go to state 45
    BlocWhile  go to state 46


state 106

   41 BlocIF: tIF tPO Cond tPF @6 tAO . PInsts tAF

    tID     shift, and go to state 35
    tIF     shift, and go to state 36
    tWHILE  shift, and go to state 37
    tPRINT  shift, and go to state 38
    tMULT   shift, and go to state 39

    $default  reduce using rule 17 (PInsts)

    PInsts     go to state 110
    Structure  go to state 41
    Inst       go to state 42
    Affect     go to state 43
    Printf     go to state 44
    BlocIF     go to state 45
    BlocWhile  go to state 46


state 107

   47 BlocWhile: tWHILE tPO @7 Cond tPF @8 . tAO PInsts tAF

    tAO  shift, and go to state 111


state 108

   14 SuiteDecl: tID @2 tCOMA SuiteDecl .

    $default  reduce using rule 14 (SuiteDecl)


state 109

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts . tAF @4 tELSE tAO @5 PInsts tAF

    tAF  shift, and go to state 112


state 110

   41 BlocIF: tIF tPO Cond tPF @6 tAO PInsts . tAF

    tAF  shift, and go to state 113


state 111

   47 BlocWhile: tWHILE tPO @7 Cond tPF @8 tAO . PInsts tAF

    tID     shift, and go to state 35
    tIF     shift, and go to state 36
    tWHILE  shift, and go to state 37
    tPRINT  shift, and go to state 38
    tMULT   shift, and go to state 39

    $default  reduce using rule 17 (PInsts)

    PInsts     go to state 114
    Structure  go to state 41
    Inst       go to state 42
    Affect     go to state 43
    Printf     go to state 44
    BlocIF     go to state 45
    BlocWhile  go to state 46


state 112

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF . @4 tELSE tAO @5 PInsts tAF

    $default  reduce using rule 37 (@4)

    @4  go to state 115


state 113

   41 BlocIF: tIF tPO Cond tPF @6 tAO PInsts tAF .

    $default  reduce using rule 41 (BlocIF)


state 114

   47 BlocWhile: tWHILE tPO @7 Cond tPF @8 tAO PInsts . tAF

    tAF  shift, and go to state 116


state 115

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 . tELSE tAO @5 PInsts tAF

    tELSE  shift, and go to state 117


state 116

   47 BlocWhile: tWHILE tPO @7 Cond tPF @8 tAO PInsts tAF .

    $default  reduce using rule 47 (BlocWhile)


state 117

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 tELSE . tAO @5 PInsts tAF

    tAO  shift, and go to state 118


state 118

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 tELSE tAO . @5 PInsts tAF

    $default  reduce using rule 38 (@5)

    @5  go to state 119


state 119

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 tELSE tAO @5 . PInsts tAF

    tID     shift, and go to state 35
    tIF     shift, and go to state 36
    tWHILE  shift, and go to state 37
    tPRINT  shift, and go to state 38
    tMULT   shift, and go to state 39

    $default  reduce using rule 17 (PInsts)

    PInsts     go to state 120
    Structure  go to state 41
    Inst       go to state 42
    Affect     go to state 43
    Printf     go to state 44
    BlocIF     go to state 45
    BlocWhile  go to state 46


state 120

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts . tAF

    tAF  shift, and go to state 121


state 121

   39 BlocIF: tIF tPO Cond tPF @3 tAO PInsts tAF @4 tELSE tAO @5 PInsts tAF .

    $default  reduce using rule 39 (BlocIF)
